Finished proof-of-concept import of skills, aspects, stress and consequences

--- a/style/components.scss
+++ b/style/components.scss
@@ -11,6 +11,7 @@
 @import "components/input/input.scss";
 @import "components/sheet/sheet.scss";
 @import "components/sheet/item-sheet.scss";
+@import "components/sheet/config.scss";
 @import "components/dialog/dialog.scss";
 @import "components/settings/settings.scss";
 @import "components/settings/settins-sheet.scss";
@@ -20,3 +21,4 @@
 @import "components/skills/skills.scss";
 @import "components/chat/chat.scss";
 @import "components/templates/templates.scss";
+@import "components/messages/messages.scss";
