--- a/style/components/header/header.scss
+++ b/style/components/header/header.scss
@@ -27,6 +27,10 @@
     flex-direction: column-reverse;
 }
 
+.fatex__header__name {
+    width: 50%;
+}
+
 .fatex__header__center {
     align-items: center;
 }
