--- a/style/settings.scss
+++ b/style/settings.scss
@@ -9,7 +9,8 @@ $sheet-background: rgb(241, 242, 246);
 $header-background: rgb(47, 53, 66);
 $header-font-color: rgb(255, 255, 255);
 
-$primary-color: rgb(47, 53, 66);
+$primary-color: rgba(47, 53, 66, 1);
+$primary-color-transparent: rgba(47, 53, 66, 0.3);
 $headline-background: $primary-color;
 $headline-color: rgb(255, 255, 255);
 
