Fixed tabs for 0.7.0

--- a/style/components/tabs/tabs.scss
+++ b/style/components/tabs/tabs.scss
@@ -7,7 +7,7 @@
     padding-bottom: 0;
 }
 
-.fatex_tabs__navigation {
+.fatex__tabs__navigation {
     border-bottom: 2px solid $primary-color;
     display: flex;
     flex-wrap: nowrap;
