--- a/system/templates/actor/character.html
+++ b/system/templates/actor/character.html
@@ -28,7 +28,7 @@
 
                     {{!--Tabs--}}
                     <div class="desk__tabs fatex__tabs">
-                        <nav class="fatex_tabs__navigation" data-group="primary">
+                        <nav class="fatex__tabs__navigation">
                             <a class="fatex_tabs__navigation__item item active" data-tab="skills">{{localize "FAx.Sheet.Tabs.SkillsStunts"}}</a>
                             <a class="fatex_tabs__navigation__item item" data-tab="extras">{{localize "FAx.Sheet.Tabs.Extras"}}</a>
                             <a class="fatex_tabs__navigation__item item" data-tab="bio">{{localize "FAx.Sheet.Tabs.Bio"}}</a>
@@ -36,7 +36,7 @@
 
                         <div class="fatex__tabs__content">
                             {{!--Skills & Stunts--}}
-                            <div class="fatex__tabs__tab fatex__tabs__tab--skills tab" data-group="skills" data-tab="skills">
+                            <div class="fatex__tabs__tab fatex__tabs__tab--skills tab" data-tab="skills">
                                 <div class="fatex__tabs__tab__content">
                                     {{> "systems/fatex/templates/actor/parts/tabs/skills.html"}}
                                     {{> "systems/fatex/templates/actor/parts/tabs/stunts.html"}}
@@ -44,14 +44,14 @@
                             </div>
 
                             {{!--Extras--}}
-                            <div class="fatex__tabs__tab fatex__tabs__tab--extras tab" data-group="extras" data-tab="extras">
+                            <div class="fatex__tabs__tab fatex__tabs__tab--extras tab" data-tab="extras">
                                 <div class="fatex__tabs__tab__content">
                                     {{> "systems/fatex/templates/actor/parts/tabs/extras.html"}}
                                 </div>
                             </div>
 
                             {{!--Bio--}}
-                            <div class="fatex__tabs__tab fatex__tabs__tab--bio tab" data-group="bio" data-tab="bio">
+                            <div class="fatex__tabs__tab fatex__tabs__tab--bio tab" data-tab="bio">
                                 <div class="fatex__tabs__tab__content">
                                     {{> "systems/fatex/templates/actor/parts/tabs/bio.html"}}
                                 </div>
