--- a/style/components/skills/skills.scss
+++ b/style/components/skills/skills.scss
@@ -32,6 +32,39 @@
     pointer-events: none;
 }
 
+.fatex__skill__secondary__actions {
+    display: flex;
+    align-items: center;
+    pointer-events: none;
+
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(-15px, 20px);
+
+    opacity: 0;
+
+    color: $primary-color;
+    font-size: 16px;
+    text-shadow: 1px -1px 1px $sheet-background;
+
+    .fatex__helper--enable-editmode & {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
+.fatex__skill__increment {
+    font-family: "Fate Icons", sans-serif;
+    cursor: pointer;
+}
+
+.fatex__skill__decrement {
+    font-family: "Fate Icons", sans-serif;
+    cursor: pointer;
+}
+
 .fatex__skill__actions_wrapper {
     position: relative;
     color: $headline-color;
