Allowed chat to have negative skills too

--- a/style/components/chat/chat.scss
+++ b/style/components/chat/chat.scss
@@ -20,6 +20,10 @@
     text-shadow: initial;
 }
 
+.fatex__chat__headline__icon--negative {
+    color: $caution-color;
+}
+
 .fatex__chat__dice {
     width: 50%;
     margin: auto;
