--- a/system/templates/chat/roll-skill.html
+++ b/system/templates/chat/roll-skill.html
@@ -4,7 +4,10 @@
             {{ skill.name }}
         </div>
 
-        <label class="fatex__chat__headline__icon fatex__headline__icon">+{{ rank }}</label>
+        {{log skill}}
+        <label class="fatex__chat__headline__icon fatex__headline__icon{{#if skill.data.isNegative}} fatex__chat__headline__icon--negative{{/if}}">
+            {{#if skill.data.isPositive}}+{{/if}}{{ rank }}
+        </label>
     </div>
 
 
@@ -20,7 +23,7 @@
         {{ total }}
 
         <span class="fatex__chat__ladder">
-            {{ladder}}
+            {{ ladder }}
         </span>
     </div>
 </div>
