Added support for tokenizer

--- a/system/templates/actor/parts/sidebar/artwork.html
+++ b/system/templates/actor/parts/sidebar/artwork.html
@@ -10,5 +10,5 @@
     </h2>
 
     <div class="fatex__artwork--image fatex__artwork--image--{{actor._id}}" title="{{actor.name}}"></div>
-    <img class="fatex__artwork--handler" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
+    <img class="fatex__artwork--handler profile" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
 </div>
