Enabled bio and added backend for stunts and extras

--- a/style/components.scss
+++ b/style/components.scss
@@ -22,3 +22,4 @@
 @import "components/chat/chat.scss";
 @import "components/templates/templates.scss";
 @import "components/messages/messages.scss";
+@import "components/biography/biography.scss";
