Added basic stunts and extras - MILESTONE! \o/

--- a/style/components.scss
+++ b/style/components.scss
@@ -23,3 +23,5 @@
 @import "components/templates/templates.scss";
 @import "components/messages/messages.scss";
 @import "components/biography/biography.scss";
+@import "components/stunt/stunt.scss";
+@import "components/extra/extra.scss";
