--- a/system/templates/actor/parts/tabs/extras.html
+++ b/system/templates/actor/parts/tabs/extras.html
@@ -1,3 +1,30 @@
 <div class="fatex__extras">
 
+    <div class="fatex__extra__add fatex__helper__editmode fatex__helper__editmode--vanish">
+        <h2 class="fatex__headline fatex__headline--center">
+            <span>+</span>
+        </h2>
+    </div>
+
+    <div class="fatex__extras__wrapper">
+        {{#each extras as |extra extraIndex|}}
+            <div class="fatex__extra item" data-item-id="{{extra._id}}">
+                <h2 class="fatex__headline fatex__sortable" data-item-id="{{extra._id}}">
+                    <span>{{extra.name}}</span>
+
+                    <div class="fatex__headline__actions fatex__item__actions">
+                        <span class="fatex__item__sort fatex__extra__sort"></span>
+                        <span class="fatex__item__settings fatex__extra__settings" data-item="{{extra._id}}"></span>
+                        <span class="fatex__item__delete fatex__extra__delete" data-item="{{extra._id}}"></span>
+                    </div>
+                </h2>
+
+                {{#ifNotEmpty extra.data.description}}
+                    <div class="fatex__extra__description">
+                        {{{extra.data.description}}}
+                    </div>
+                {{/ifNotEmpty}}
+            </div>
+        {{/each}}
+    </div>
 </div>
