--- a/system/templates/item/extra-sheet.html
+++ b/system/templates/item/extra-sheet.html
@@ -1,25 +1,25 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Stunt.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Extra.EditItem" item=item}}
 
 <div class="fatex__settings">
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FAx.Item.Stunt.Name"
+        headline = "FAx.Item.Extra.Name"
         field = item.name
         fieldName = "name"
-        placeholder = "FAx.Item.Stunt.Name"
+        placeholder = "FAx.Item.Extra.Name"
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FAx.Item.Stunt.Description"
-        help = "FAx.Item.Stunt.DescriptionHelp"
+        headline = "FAx.Item.Extra.ShortDescription"
+        help = "FAx.Item.Extra.ShortDescriptionHelp"
+        fieldName = "data.shortDescription"
+        field = data.shortDescription
+    }}
+
+    {{> "systems/fatex/templates/item/parts/settings/setting-text.html"
+        headline = "FAx.Item.Extra.Description"
+        help = "FAx.Item.Extra.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
-    }}
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FAx.Item.Stunt.Description"
-        help = "FAx.Item.Stunt.DescriptionHelp"
-        fieldName = "data.description"
-        field = data.shortDescription
     }}
 </div>
 
