--- a/system/templates/item/stunt-sheet.html
+++ b/system/templates/item/stunt-sheet.html
@@ -8,19 +8,18 @@
         placeholder = "FAx.Item.Stunt.Name"
     }}
 
-
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+        headline = "FAx.Item.Stunt.ShortDescription"
+        help = "FAx.Item.Stunt.ShortDescriptionHelp"
+        fieldName = "data.shortDescription"
+        field = data.shortDescription
+    }}
+
+    {{> "systems/fatex/templates/item/parts/settings/setting-text.html"
         headline = "FAx.Item.Stunt.Description"
         help = "FAx.Item.Stunt.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
-    }}
-
-    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FAx.Item.Stunt.Description"
-        help = "FAx.Item.Stunt.DescriptionHelp"
-        fieldName = "data.description"
-        field = data.shortDescription
     }}
 </div>
 
