Fix for editable divs

--- a/system/templates/item/parts/settings/setting-text.html
+++ b/system/templates/item/parts/settings/setting-text.html
@@ -11,7 +11,7 @@
             class="fatex__setting__input fatex__input__input"
             data-edit="{{ fieldName }}"
         >
-            {{#ifNotEquals field ' '}}{{ field }}{{/ifNotEquals}}
+            {{{ field }}}
         </div>
     </label>
 </div>
