--- a/system/templates/actor/character.html
+++ b/system/templates/actor/character.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="desk__content">
-            <div class="desk__content__inner">
+            <div class="desk__content__inner{{#if sheetConfig.flipped}} desk__content__inner--flipped{{/if}}">
 
                 <div class="desk__tabloid">
                     {{!--Messages--}}
