--- a/system/templates/actor/parts/config.html
+++ b/system/templates/actor/parts/config.html
@@ -1,7 +1,7 @@
 <div class="fatex__sheet_config">
     <h2>Sheet configuration</h2>
 
-    <div class="fatex__sheet__action fatex__sheet__action--import-core">
+    {{!--<div class="fatex__sheet__action fatex__sheet__action--import-core">
         Import core!
     </div>
 
@@ -11,5 +11,5 @@
 
     <div class="fatex__sheet__action fatex__sheet__action--import-condensed">
         Import condensed!
-    </div>
+    </div>--}}
 </div>
