--- a/system/templates/actor/parts/sidebar/artwork.html
+++ b/system/templates/actor/parts/sidebar/artwork.html
@@ -1,4 +1,4 @@
-<div class="fatex__artwork">
+<div class="fatex__artwork{{#if sheetConfig.hideArtwork}} fatex__artwork--hidden{{/if}}">
     <style>
         .fatex__artwork--image--{{actor._id}} {
             background-image: url("{{actor.img}}");
