--- a/style/components/artwork/artwork.scss
+++ b/style/components/artwork/artwork.scss
@@ -3,6 +3,10 @@
     padding: $component-padding;
 }
 
+.fatex__artwork--hidden {
+    display: none;
+}
+
 .fatex__artwork--image {
     width: 100%;
     height: 200px;
