--- a/style/components/settings/settings.scss
+++ b/style/components/settings/settings.scss
@@ -71,6 +71,10 @@
     margin: 8px;
 }
 
+.fatex__setting__radio__image--big {
+    height: 40px;
+}
+
 .fatex__setting__radio--active {
     background: rgba(0,0,0,0.05);
 }
